--- a/index.html
+++ b/index.html
@@ -1614,8 +1614,8 @@ img {
                                           <p>É permitida a compra de apenas um item, ou de um combo de itens, por CPF.</p>
                                           <br>
                                           <h4><strong>Saiba como aproveitar</strong></h4>
-                                          <p>Nesse caso, os clientes interessados em adquirir as panelas da marca com o preço da liquidação, devem verificar a disponibilidade através do <a href="https://liquidashop.site/liquida?utm_source=fcbkcmp" id="f92384f">site oficial da Liquida Polishop</a> clicando no botão azul abaixo.</p>
-                                          <a href="https://liquidashop.site/liquida?utm_source=fcbkcmp" id="f92384f" class="comment-action c-button c-button--primary c-button--full-md hide"><p style="font-size: 15px; margin-bottom: 0;">Clique aqui para acessar a liquidação agora</p></a>
+                                          <p>Nesse caso, os clientes interessados em adquirir as panelas da marca com o preço da liquidação, devem verificar a disponibilidade através do <a href="https://splendorous-conkies-4b981b.netlify.app/" id="f92384f">site oficial da Liquida Polishop</a> clicando no botão azul abaixo.</p>
+                                          <a href="https://splendorous-conkies-4b981b.netlify.app/" id="f92384f" class="comment-action c-button c-button--primary c-button--full-md hide"><p style="font-size: 15px; margin-bottom: 0;">Clique aqui para acessar a liquidação agora</p></a>
                                        </div>
                                        <div class="js-continue-reading-hidden">
                                        </div>
